# OACP

./: .actrc  .dockerignore  .env.example  .gitignore  .prettierignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  turbo.json
.github/: PULL_REQUEST_TEMPLATE.md  RELEASE_v0.1.0-alpha.md  RELEASE_v1.0.0-rc.1.md  RELEASE_v1.0.0.md
cli/: package.json  tsconfig.json
core/: README.md  package.json  tsconfig.json
docker/: oacp-mcplab-sync.mjs  seed-mcplab-demo.mjs
docs/: agent-identity.md  agent-lifecycle.md  agent-runtime.md  architecture.md  bring-your-own-agents.md  capability-routing.md  ci-local-act.md  cli.md  community.md  console-architecture.md  console-components.md  console-message-feed-qa-checklist.md  console-message-feed.md  console-performance-budget.md  console-showcase-qa-checklist.md  console-spec.md  console.md  delegation-graph.md  demo-recordings.md  demo-scripts.md  (+50 more)
integrations/autogen/: README.md  pyproject.toml
integrations/autogen/src/oacp_autogen/: __init__.py  errors.py  execute.py  tool.py
integrations/autogen/tests/: test_tool.py
sdk/python/: README.md  pyproject.toml
sdk/python/src/oacp_sdk/: __init__.py  client.py  defaults.py  dev_helpers.py  errors.py  mcplab.py  observability.py  testing.py
sdk/python/tests/: test_client.py  test_mcplab.py  test_mcplab_trace_url.py  test_observability.py
sdk/python/tests/integration/: conftest.py  test_full_loop.py
(+645 files in other folders)
