[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "oacp-autogen"
version = "1.0.0"
description = "AutoGen adapter for OACP — delegate agent tasks to the OACP network"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "pytest-httpx>=0.30",
]
autogen = [
  "autogen-core>=0.4.0",
  "autogen-agentchat>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/oacp_autogen"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
